--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "redactor"
 version = "0.0.0"
-description = "A Tauri App"
+description = "A Tauri MainLayout"
 authors = ["you"]
 license = ""
 repository = ""
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = ["shell-open"] }
+tauri = { version = "1.5", features = [ "window-hide", "window-minimize", "window-unminimize", "window-unmaximize", "window-maximize", "window-show", "window-close", "window-start-dragging", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
